--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Backend
 
 #DB connection
-spring.datasource.url=jdbc:mysql://localhost:3306/Backenddb
+spring.datasource.url=jdbc:mysql://localhost:3306/backenddb
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=pinoyheritage12345
 
 #JPA settings
 spring.jpa.hibernate.ddl-auto=update
